Begin implementing the api